[package]
name = "misc-conf"
version = "0.1.1"
edition = "2021"
license = "MIT"
include = ["/src", "README.md"]
keywords = ['nginx', 'apache', 'parser']
documentation = "https://docs.rs/misc-conf"
homepage = "https://crates.io/crates/misc-conf"
repository = "https://github.com/metaworm/misc-conf"
description = "Nom parser for nginx/apache configuration"

[dependencies]
nom = '7'
glob = '0.3'
anyhow = '1'
regex = '1'
luaparse = '0.2'